--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
  
                     type: "event",
  
-                    value: { email: userEmail, nameval: userName }
+                    value: { botemail: userEmail, BotNameVar: userName }
  
                   },
  
