--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
           <script src="https://cdn.botframework.com/botframework-webchat/latest/webchat.js"></script>
            
           <!-- Add your azure app client ID -->
-          <mgt-msal2-provider client-id="5d8f16b7-7a61-4fb0-8155-cac93cd71dfc"
+          <mgt-msal2-provider client-id="fb15dbf2-25c0-4534-bd74-c542a518a63e"
             authority="https://login.windows.net/41ff26dc-250f-4b13-8981-739be8610c21/" login-type="popup">
           </mgt-msal2-provider>
  
@@ -258,7 +258,8 @@
         };
  
         // Add your BOT token endpoint below
-        var theURL = "https://33c73de812e242e89d253734721bf6.16.environment.api.powerplatform.com/powervirtualagents/botsbyschema/cr943_slbDpsChatbotDemoKarthik/directline/token?api-version=2022-03-01-preview";
+        var theURL = "[10:39] Adhya Kumari
+https://33c73de812e242e89d253734721bf6.16.environment.api.powerplatform.com/powervirtualagents/botsbyschema/cr943_poc1/directline/token?api-version=2022-03-01-preview";
  
         const queryString = window.location.search;
  
