--- a/index.html
+++ b/index.html
@@ -258,8 +258,7 @@
         };
  
         // Add your BOT token endpoint below
-        var theURL = "[10:39] Adhya Kumari
-https://33c73de812e242e89d253734721bf6.16.environment.api.powerplatform.com/powervirtualagents/botsbyschema/cr943_poc1/directline/token?api-version=2022-03-01-preview";
+        var theURL = "https://33c73de812e242e89d253734721bf6.16.environment.api.powerplatform.com/powervirtualagents/botsbyschema/cr943_poc1/directline/token?api-version=2022-03-01-preview";
  
         const queryString = window.location.search;
  
