--- a/index.html
+++ b/index.html
@@ -219,9 +219,9 @@
  
       <!-- Change the h1 text to change the bot name -->
  
-      <h1>Hotel Management</h1>
+      <h1>AskSC Chatbot</h1>
  
-      <a href="kgopireddy@slb.com?subject=hotel management Chatbot Query" alt="Help" title="Help"><img
+      <a href="kgopireddy@slb.com?subject=AskSC Chatbot Query" alt="Help" title="Help"><img
           align="right" style="vertical-align:top;margin:-20px
  
         4px;width:30px;height:30px" src="https://www.linkpicture.com/q/images.png"></a>
@@ -258,8 +258,7 @@
         };
  
         // Add your BOT token endpoint below
-        var theURL = "https://33c73de812e242e89d253734721bf6.16.environment.api.powerplatform.com/powervirtualagents/botsbyschema/cr943_poc1/directline/token?api-version=2022-03-01-preview";
- 
+        var theURL = "https://33c73de812e242e89d253734721bf6.16.environment.api.powerplatform.com/powervirtualagents/botsbyschema/cr943_slbDpsChatbotDemoJameela/directline/token?api-version=2022-03-01-preview";
         const queryString = window.location.search;
  
         let userName = provider.getAccount().name;
