--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
  
                     type: "event",
  
-                    value: { botemail: userEmail, BotNameVar: userName }
+                    value: { BotEmail: userEmail, BotUserName: userName }
  
                   },
  
