--- a/index.html
+++ b/index.html
@@ -260,8 +260,8 @@
         // Add your BOT token endpoint below
         var theURL = "https://33c73de812e242e89d253734721bf6.16.environment.api.powerplatform.com/powervirtualagents/botsbyschema/cr943_slbDpsChatbotDemoJameela/directline/token?api-version=2022-03-01-preview";
         const queryString = window.location.search;
-            let urlParams   = new URLSearchParams(queryString);
-            let VarUserId = urlParams.get("VarUserId");
+            // let urlParams   = new URLSearchParams(queryString);
+            // let VarUserId = urlParams.get("VarUserId");
  
         let userName = provider.getAccount().name;
  
@@ -325,7 +325,7 @@
  
                     type: "event",
  
-                    value: { botemail: userEmail, BotNameVar: VarUserId }
+                    value: { botemail: userEmail, BotNameVar: userName }
  
                   },
  
