--- a/index.html
+++ b/index.html
@@ -219,9 +219,9 @@
  
       <!-- Change the h1 text to change the bot name -->
  
-      <h1>Book Your Appointment</h1>
+      <h1>MaterialAdvisor</h1>
  
-      <a href="kgopireddy@slb.com?subject=Book Your Appointment Query" alt="Help" title="Help"><img
+      <a href="kgopireddy@slb.com?subject=MaterialAdvisor Query" alt="Help" title="Help"><img
           align="right" style="vertical-align:top;margin:-20px
  
         4px;width:30px;height:30px" src="https://www.linkpicture.com/q/images.png"></a>
