--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
  
                     type: "event",
  
-                    value: { botemail: userEmail, BotNameVar: userName }
+                    value: { BotEmail: userEmail, BotNameVar: userName }
  
                   },
  
